--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pustakam</title>
+    <title>LibApp</title>
 
     <script src="https://kit.fontawesome.com/859e7ab76e.js" crossorigin="anonymous"></script>
 
